syntax = "proto3";

package server;

option go_package = "bot/api/proto/gen;gen";

import "google/api/annotations.proto"; // -I bot/api/third_party

message CommitUpdate {
    string sha = 1;
    string author = 2;            
    string message = 3;           
    string timestamp = 4;         
    string url = 5;          
}

message CommitUpdateAnswer {
    string status = 1;
}

service Bot {
    rpc SendCommitUpdate(CommitUpdate) returns (CommitUpdateAnswer) {
        option (google.api.http) = {
            post: "/v1/commit"
            body: "*"
        };
    }
}
